TDP-447: fix  on IE

--- a/dataprep-webapp/src/css/components/_inventory.scss
+++ b/dataprep-webapp/src/css/components/_inventory.scss
@@ -15,7 +15,7 @@ $inventory-sort-height: 50px;
 
     border-bottom: 1px solid $border-color;
     font-weight: 300;
-    padding: 15px 5px 0 0;
+    padding: 0 5px 0 0;
   }
 
   .inventory-list {
